--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,15 @@
 <h1 class="text-center mb-3">{{title}}</h1>
+<form class="mb-4" action="/api/members" method="POST">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" name="name" id="name" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" class="form-control">
+  </div>
+    <input type="submit" value="Add member" class="btn btn-primary btn-block">
+</form>
 <h4>Members</h4>
 <ul class="list-group">
   {{#each members}}
