add visit API link

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,3 +16,5 @@
     <li class="list-group-item">{{this.name}}: {{this.email}}</li>
   {{/each}}
 </ul>
+
+<a href="/api/members" class="btn btn-light mt-4">Visit API</a>
